Add crawling and wordcloud file

--- a/Final Project/Project1/4. crawling_and_wordcloud_card_event.ipynb
+++ b/Final Project/Project1/4. crawling_and_wordcloud_card_event.ipynb
@@ -242,7 +242,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 하나카드"
+    "# 하나카드(완성)"
    ]
   },
   {
@@ -264,7 +264,7 @@
     "import os\n",
     "import time\n",
     "\n",
-    "os.chdir(r'C:\\Users\\연주\\Desktop\\career\\청취아\\파이널 프로젝트\\data')\n",
+    "os.chdir(r'C:\\Users\\LGR7\\Desktop\\핀테크')\n",
     "\n",
     "hana_driver = webdriver.Chrome('chromedriver.exe')\n",
     "hana_driver.get(\"https://www.hanacard.co.kr/OPP35050000D.web?schID=pcd&mID=OPP35050000D\")\n",
@@ -292,6 +292,10 @@
     "hn2 = pd.DataFrame(data=hn_date, columns=['date'])\n",
     "hn_total = pd.concat([hn,hn2],axis=1,names=['context','date'])\n",
     "hn_total.to_csv('hn_total.csv', encoding='cp949')\n",
+    "  \n",
+    "    \n",
+    "    \n",
+    "    \n",
     "    \n",
     "#93페이지 까지는 그냥 넘기기\n",
     "os.chdir(r'C:\\Users\\연주\\Desktop\\career\\청취아\\파이널 프로젝트\\data')\n",
@@ -333,7 +337,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 워드 클라우드 (수정필요)"
+    "## 워드 클라우드"
    ]
   },
   {
@@ -341,7 +345,83 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Install WordCloud once.\n",
+    "!pip install wordcloud\n",
+    "!pip install nltk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from konlpy.tag import Twitter\n",
+    "from collections import Counter\n",
+    "import os\n",
+    "import pandas as pd\n",
+    "\n",
+    "\n",
+    "# 파일 불러오기\n",
+    "os.chdir(r'C:\\Users\\LGR7\\Desktop\\핀테크')\n",
+    "\n",
+    "hana = pd.read_csv('hn_total.csv',encoding = 'cp949')\n",
+    "hana_title = hana['text']\n",
+    "\n",
+    "# 이벤트 제목 리스트화\n",
+    "list_data=list()\n",
+    "for i in range(len(hana_title)):\n",
+    "    list_data.append(hana_title.loc[i])\n",
+    "\n",
+    "# 형태소 분석\n",
+    "twitter = Twitter() \n",
+    "\n",
+    "# 형태소 분석 결과\n",
+    "morphs = [] \n",
+    "\n",
+    "for sentence in list_data: \n",
+    "    morphs.append(twitter.pos(sentence))     \n",
+    "#print(morphs)\n",
+    "\n",
+    "\n",
+    "noun_adj_adv_list=[]\n",
+    "\n",
+    "for sentence in morphs : \n",
+    "    for word, tag in sentence : \n",
+    "        if tag in ['Noun'] and (\"것\" not in word)and(\"이벤트\"not in word)and(\"혜택\"not in word)and(\"최대\"not in word)and(\"프로모션\"not in word)and(\"할인\"not in word) and (\"내\" not in word)and (\"나\" not in word)and (\"수\"not in word) and(\"게\"not in word)and(\"말\"not in word): \n",
+    "            noun_adj_adv_list.append(word)             \n",
+    "#print(noun_adj_adv_list)\n",
+    "\n",
+    "# 단어 빈도\n",
+    "count = Counter(noun_adj_adv_list)\n",
+    "words = dict(count.most_common())\n",
+    "#print(words)\n",
+    "\n",
+    "# TOP 10\n",
+    "import operator\n",
+    "\n",
+    "top10=sorted(words.items(),key=operator.itemgetter(1), reverse=True)\n",
+    "top10[:100]\n",
+    "#print(top10)\n",
+    "\n",
+    "# 시각화\n",
+    "\n",
+    "from wordcloud import WordCloud \n",
+    "import matplotlib.pyplot as plt \n",
+    "import nltk \n",
+    "from nltk.corpus import stopwords\n",
+    "%matplotlib qt\n",
+    "# %matplotlib inline\n",
+    "import matplotlib \n",
+    "from IPython.display import set_matplotlib_formats \n",
+    "\n",
+    "\n",
+    "wordcloud = WordCloud(font_path = 'C:/Windows/Fonts/HMKMG.ttf', background_color='white',colormap = \"Accent_r\", width=1500, height=1000).generate_from_frequencies(words) \n",
+    "plt.imshow(wordcloud) \n",
+    "plt.axis('off') \n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -359,15 +439,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "from selenium import webdriver\n",
-    "import bs4,re\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
+    "import bs4\n",
+    "from selenium import webdriver\n",
+    "import os\n",
     "import time\n",
     "\n",
     "os.chdir(r'C:\\Users\\LGR7\\Desktop\\핀테크')\n",
@@ -375,31 +454,29 @@
     "woori_driver = webdriver.Chrome('chromedriver.exe')\n",
     "woori_driver.get(\"https://sccd.wooribank.com/ccd/Dream?withyou=CDCNT0050\")\n",
     "\n",
-    "title_text=[]\n",
-    "wr_date=[]\n",
+    "\n",
+    "woori_text=[]\n",
+    "woori_date=[]\n",
     "while(True):        \n",
     "    html = woori_driver.page_source\n",
     "    soup = bs4.BeautifulSoup(html, 'html.parser')\n",
     "    \n",
     "    tags = woori_driver.find_elements_by_css_selector('td.title')\n",
     "    for atag in tags:\n",
-    "        title_text.append(atag.text)\n",
-    "        print(atag.text)\n",
-    "        #for i in range(1,16,1): \n",
-    "        woori_date = woori_driver.find_element_by_xpath(\"//*[@id='ing_event']/table/tbody/tr[\"+str(i)+\"]/td[3]\")\n",
-    "        wr_date.append(woori_date.text)\n",
-    "        print(woori_date.text)\n",
+    "        woori_text.append(atag.text)\n",
+    "    for i in range(1,16): \n",
+    "        wr_date = woori_driver.find_element_by_xpath(\"//*[@id='ing_event']/table/tbody/tr[\"+str(i)+\"]/td[3]\")\n",
+    "        woori_date.append(wr_date.text)\n",
     "    \n",
     "    try:\n",
     "        woori_driver.find_element_by_xpath(\"//*[@id='ing_event']/ul/li[2]/div/a[12]\").click()\n",
     "    except:\n",
     "        break\n",
-    "        \n",
-    "## 저장하기\n",
-    "woori = {\"title\":title_text, \"date\":wr_date.text}\n",
-    "df_woori = pd.DataFrame(news,columns = ['title','date'])\n",
-    "\n",
-    "df_woori.to_excel(\"woori.xlsx\")"
+    "    \n",
+    "woori = pd.DataFrame(data=woori_text, columns=['text'])\n",
+    "woori2 = pd.DataFrame(data=woori_date, columns=['date'])\n",
+    "woori_total = pd.concat([woori,woori2],axis=1,names=['context','date'])\n",
+    "woori_total.to_csv('woori_total.csv', encoding='cp949')"
    ]
   },
   {
@@ -415,6 +492,146 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 신한카드 (크롤링 코드 수정 필요)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 지난 이벤트"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import bs4\n",
+    "from selenium import webdriver\n",
+    "import os\n",
+    "import time\n",
+    "\n",
+    "#신한카드\n",
+    "os.getcwd()\n",
+    "os.chdir(r'C:\\anaconda')\n",
+    "my_driver = webdriver.Chrome('chromedriver.exe') \n",
+    "my_driver.get(\"https://www.shinhancard.com/conts/person/event/event/last_event.jsp\")\n",
+    "\n",
+    "\n",
+    "test=[]\n",
+    "\n",
+    "while (True):\n",
+    "    my_driver.find_element_by_xpath(\"//*[@id='pE-ListmoreJo']/div[1]\").click()\n",
+    "    time.sleep(3)\n",
+    "#break 수동으로 해결\n",
+    "\n",
+    "res = my_driver.find_elements_by_css_selector('td.textL')\n",
+    "for x in res:\n",
+    "    #print(x.text)\n",
+    "    test.append(x.text)\n",
+    "    \n",
+    "del test[1098:]\n",
+    "sh = pd.DataFrame(data=test)\n",
+    "sh.to_csv('sh_name.csv')\n",
+    "\n",
+    "sh_date=[]\n",
+    "for page in range(1,1099):\n",
+    "    date=my_driver.find_element_by_xpath(\"//*[@id='pE-ListmoreJo']/table/tbody/tr[\"+str(page)+\"]/td[2]\")\n",
+    "    sh_date.append(date.text)\n",
+    "\n",
+    "col_names=['context','date']\n",
+    "sh2 = pd.DataFrame(data=sh_date)\n",
+    "\n",
+    "sh_total = pd.concat([sh,sh2],axis=1,names=['context','date'])\n",
+    "sh_total.to_csv('sh_total.csv', encoding='cp949')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 워드 클라우드"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from konlpy.tag import Twitter\n",
+    "from collections import Counter\n",
+    "import os\n",
+    "import pandas as pd\n",
+    "\n",
+    "\n",
+    "# 파일 불러오기\n",
+    "os.chdir(r'C:\\Users\\LGR7\\Desktop\\핀테크')\n",
+    "\n",
+    "sinhan = pd.read_csv('sh_total.csv',encoding = 'cp949')\n",
+    "sinhan_title = sinhan['context']\n",
+    "\n",
+    "# 이벤트 제목 리스트화\n",
+    "list_data=list()\n",
+    "for i in range(len(sinhan_title)):\n",
+    "    list_data.append(sinhan_title.loc[i])\n",
+    "\n",
+    "# 형태소 분석\n",
+    "twitter = Twitter() \n",
+    "\n",
+    "# 형태소 분석 결과\n",
+    "morphs = [] \n",
+    "\n",
+    "for sentence in list_data: \n",
+    "    morphs.append(twitter.pos(sentence))     \n",
+    "#print(morphs)\n",
+    "\n",
+    "\n",
+    "noun_adj_adv_list=[]\n",
+    "\n",
+    "for sentence in morphs : \n",
+    "    for word, tag in sentence : \n",
+    "        if tag in ['Noun'] and (\"것\" not in word)and(\"주년\"not in word)and(\"혜택\"not in word)and(\"이용\"not in word) and (\"내\" not in word)and(\"최대\"not in word)and(\"추가\"not in word)and(\"할인\"not in word)and (\"나\" not in word)and (\"수\"not in word)and(\"게\"not in word)and(\"말\"not in word)and(\"이벤트\"not in word)and(\"신한\"not in word)and(\"신한카드\"not in word): \n",
+    "            noun_adj_adv_list.append(word)             \n",
+    "#print(noun_adj_adv_list)\n",
+    "\n",
+    "# 단어 빈도\n",
+    "count = Counter(noun_adj_adv_list)\n",
+    "words = dict(count.most_common())\n",
+    "#print(words)\n",
+    "\n",
+    "# TOP 10\n",
+    "import operator\n",
+    "\n",
+    "top10=sorted(words.items(),key=operator.itemgetter(1), reverse=True)\n",
+    "top10[:100]\n",
+    "#print(top10)\n",
+    "\n",
+    "# 시각화\n",
+    "\n",
+    "from wordcloud import WordCloud \n",
+    "import matplotlib.pyplot as plt \n",
+    "import nltk \n",
+    "from nltk.corpus import stopwords\n",
+    "%matplotlib qt\n",
+    "# %matplotlib inline\n",
+    "import matplotlib \n",
+    "from IPython.display import set_matplotlib_formats \n",
+    "\n",
+    "\n",
+    "wordcloud = WordCloud(font_path = 'C:/Windows/Fonts/HMKMG.ttf', background_color='white',colormap = \"Accent_r\", width=1500, height=1000).generate_from_frequencies(words) \n",
+    "plt.imshow(wordcloud) \n",
+    "plt.axis('off') \n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
@@ -433,7 +650,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.9"
   },
   "toc": {
    "base_numbering": 1,
@@ -448,7 +665,7 @@
     "height": "calc(100% - 180px)",
     "left": "10px",
     "top": "150px",
-    "width": "165px"
+    "width": "234px"
    },
    "toc_section_display": true,
    "toc_window_display": true
@@ -475,9 +692,9 @@
    },
    "position": {
     "height": "458px",
-    "left": "996px",
+    "left": "849px",
     "right": "20px",
-    "top": "120px",
+    "top": "94px",
     "width": "350px"
    },
    "types_to_exclude": [
